--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chatter|App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>chatter|app</title>
 </head>
 <body>
     
